--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,9 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
       POSTGRES_USER: ${POSTGRES_USER:-app}
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - ./docker/db/data:/var/lib/postgresql/data:rw
+    ports:
+      - "5432:5432"
 
 volumes:
 ###> doctrine/doctrine-bundle ###
